@@ -149,9 +149,3 @@
 	display: block;
 	z-index: 1000;
 }
-
-
-.first a {
-	border-top: 1px solid #2f2f2f;
-}
-
