@@ -3,8 +3,10 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MODx 0.9.5 RC1 (rev 1884 - Nov 2, 2006)
+MODx 0.9.5 RC1 (rev 1887 - Nov 2, 2006)
 ====================================
+* Update Wayfinder to record references better: e.g., 6 to [~6~] (1885)
+* Fix incorrect 1px top border on MODx Host menu (1797/1887)
 * Update to Jot 1.0 release (1884)
 * [FS#632] remove reference to "folder" in main english.inc.php (1870)
 * Language file update to QuickEdit. (1865)
